--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,7 +1,15 @@
 .navbar
+    &-wrapper
+        font-family: Open Sans
+        max-width: 1140px
+        margin: auto
+        max-height: 100px
+        padding: 26px 0 39px 0
+        margin-bottom: 36px
     &-menu
         display: flex
         justify-content: space-between
+        align-items: center
         &__item
             font-style: normal
             font-weight: 600
@@ -21,10 +29,6 @@
             box-sizing: border-box
             border-radius: 8px
             padding: 13px 24px
-    &-wrapper
-        max-width: 1140px
-        margin: auto
-        max-height: 100px
-        padding: 39px 0 39px 0
-        margin-bottom: 36px
+            background: $light
+
             
