--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,3 +4,7 @@
 @import 'variables'
 //Стили для блока header 
 @import 'blocks/header'
+//Стили для блока hero 
+@import 'blocks/hero'
+//Стили для блока collection 
+@import 'blocks/collection'
