--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -5,6 +5,9 @@ body
 .container
     max-width: 1280px
     margin: auto
+.content-wrapper
+    max-width: 1140px
+    margin: auto
 button
     cursor: pointer
     outline: none
