--- a/sass/blocks/_collection.sass
+++ b/sass/blocks/_collection.sass
@@ -1,8 +1,13 @@
 .collection
     margin-bottom: 145px
+    &-wrapper
+        max-width: 1140px
+        margin: auto
+        display: flex
+        justify-content: space-between
     &-grid
-        min-width: 690px
-        max-height: 490px
+        width: 690px
+        height: 490px
         margin-right: 58px
         display: flex
         flex-direction: column
@@ -43,6 +48,3 @@
             text-decoration: none
         &__image
             padding-left: 20px
-.content-wrapper
-    display: flex
-    justify-content: space-between
