--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,3 +8,5 @@
 @import 'blocks/hero'
 //Стили для блока collection 
 @import 'blocks/collection'
+//Стили для блока trending 
+@import 'blocks/trending'
