--- a/sass/blocks/_trending.sass
+++ b/sass/blocks/_trending.sass
@@ -65,6 +65,7 @@
             align-items: center
             margin-bottom: 35px
 .button
+    cursor: pointer
     &-image
         margin-bottom: 20px
     &-description
