--- a/sass/blocks/_trending.sass
+++ b/sass/blocks/_trending.sass
@@ -40,6 +40,10 @@
         display: flex
         flex-wrap: wrap
         justify-content: space-between
+        &__payment
+            cursor: pointer
+            display: flex
+            justify-content: space-between
         &__image
             margin-bottom: 20px
         &__description
