add slider feedbacks

--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -19,11 +19,10 @@
         background-color: rgba(14, 199, 122, 0.1)
         max-width: 175px
         margin-bottom: 28px
-
     &__title
-        max-width: 474px
+        max-width: 524px
         min-height: 204
-        font-family: 'HK Grotesk'
+        font-family: 'HK Grotesk', sans-serif
         font-style: normal
         font-weight: bold
         font-size: 56px
@@ -37,7 +36,7 @@
     &__subtitle
         max-width: 652px
         min-height: 108px
-        font-family: Open Sans
+        font-family: Open Sans, sans-serif
         font-style: normal
         font-weight: normal
         font-size: 20px
@@ -63,7 +62,7 @@
             margin-right: 8px
         &__item
             margin-right: 30px
-            font-family: HK Grotesk
+            font-family: HK Grotesk, sans-serif
             font-style: normal
             font-weight: 600
             font-size: 16px
