--- a/sass/blocks/_trending.sass
+++ b/sass/blocks/_trending.sass
@@ -12,7 +12,7 @@
         margin-bottom: 48px
         &__title
             color: $primary
-            font-family: HK Grotesk
+            font-family: HK Grotesk, sans-serif
             font-style: normal
             font-weight: bold
             font-size: 48px
@@ -23,7 +23,7 @@
         text-decoration: none
         color: $primary-light
         margin-left: 38px
-        font-family: Open Sans
+        font-family: Open Sans, sans-serif
         font-style: normal
         font-weight: normal
         font-size: 18px
@@ -48,7 +48,7 @@
             margin-bottom: 20px
         &__description
             display: block
-            font-family: HK Grotesk
+            font-family: HK Grotesk, sans-serif
             font-style: normal
             font-weight: bold
             color: $primary
@@ -74,7 +74,7 @@
         margin-bottom: 20px
     &-description
         display: block
-        font-family: HK Grotesk
+        font-family: HK Grotesk, sans-serif
         font-style: normal
         font-weight: bold
         font-size: 24px
@@ -84,7 +84,7 @@
         color: $light
 .payment
     &__sum
-        font-family: Open Sans
+        font-family: Open Sans, sans-serif
         font-style: normal
         font-weight: normal
         font-size: 20px
