--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,3 +10,5 @@
 @import 'blocks/collection'
 //Стили для блока trending 
 @import 'blocks/trending'
+//Стили для блока feedbacks 
+@import 'blocks/feedbacks'
