--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,7 +1,7 @@
 *   
     box-sizing: border-box
 body
-    font-family: 'Open Sans'
+    font-family: 'Open Sans', sans-serif
 .container
     max-width: 1280px
     margin: auto
