--- a/sass/blocks/_collection.sass
+++ b/sass/blocks/_collection.sass
@@ -20,7 +20,7 @@
         &__title
             padding-top: 10px
             margin-top: 0
-            font-family: HK Grotesk
+            font-family: HK Grotesk, sans-serif
             font-style: normal
             font-weight: bold
             font-size: 48px
@@ -30,7 +30,7 @@
             margin-bottom: 24px
         &__text
             display: block
-            font-family: Open Sans
+            font-family: Open Sans, sans-serif
             font-style: normal
             font-weight: normal
             font-size: 20px
@@ -39,7 +39,7 @@
             margin-bottom: 32px
         &__link
             display: block
-            font-family: Open Sans
+            font-family: Open Sans, sans-serif
             font-style: normal
             font-weight: bold
             font-size: 18px
