--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,6 +1,6 @@
 .navbar
     &-wrapper
-        font-family: Open Sans
+        font-family: Open Sans, sans-serif
         max-width: 1140px
         margin: auto
         max-height: 100px
